# web

./: .drone.yaml  .env  Cargo.toml  Dockerfile
api/: Cargo.toml
api/src/: access.rs  ctx.rs  lib.rs  middleware.rs  middlewares.rs
api/src/handlers/: login.rs  user.rs
app/: Cargo.toml
app/src/: main.rs
error/: Cargo.toml
error/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231223_012325_user.rs  m20231223_012454_permission.rs  m20231223_012510_role.rs  m20231223_012517_user_role.rs  m20231223_012533_role_permission.rs
store/: Cargo.toml
store/src/: db.rs  lib.rs
store/src/entity/: mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  user.rs  user_role.rs
