[workspace]
members = [
    "app",
    "api",
    "error",
    "migration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1"
thiserror = "1.0"
jsonwebtoken = "9"
once_cell = "1.8"
chrono = "0.4.31"
axum-extra = {version = "0.9.0",features = ["typed-header"]}
tracing ="0"
tracing-subscriber = "0"