[package]
name = "store"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error ={ path = "../error" }

sea-orm = { workspace = true }
serde ={ workspace = true }
serde_json ={ workspace = true }
